k8s/sandbox-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sandbox-service
spec:
  type: ClusterIP
  selector:
    app: sandbox
  ports:
  - port: 80
    name: http
    targetPort: 8000
